<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">零公里(卖家版)</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="store_management">店铺管理</string>
    <string name="data_report">数据报表</string>
    <string name="order_management">订单管理</string>
    <string name="menu_management">菜单管理</string>
    <string name="about_us">关于我们</string>
    
    <string name="new_classification">新建分类</string>
    <string name="new_food">新建菜品</string>

    <string name="shop_business">店铺营业</string>
    <string name="business_time">营业时间</string>
    <string name="shop_notices">店铺公告</string>
    <string name="send_price">起送价</string>
    <string name="send_food_price">送餐费</string>
    <string name="send_time">送达时间</string>
    <string name="message_business">短信接单</string>
    <string name="client_business">客户端接单</string>
    <string name="log_out">退出登录</string>

    <string name="welcomeback">欢迎回来</string>
    <string name="phonenumber">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="refresh_more">加载更多</string>
    <string name="save">保存</string>
    <string name="del">删除</string>

    <string name="food_num">菜品总数:</string>
    <string name="order_details">订单详情</string>
    <string name="order_need">订单需求:</string>
    <string name="order_list">订单列表:</string>
    <string name="order_note">订单备注:</string>
    <string name="order_finish">确认订单</string>
    <string name="pay_treasure">支付宝</string>
    <string name="OK">确定</string>
    <string name="time_to_send">及时送</string>
    <string name="appointment_to_send">预约送</string>
    <string name="provide_the_invoice">需要提供收银小票</string>
    <string name="commercial_invoice">需要提供商用小票</string>


    <string name="done_label">Done</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="time_placeholder" translatable="false">--</string>
    <string name="time_separator" translatable="false">:</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="radial_numbers_typeface" translatable="false">sans-serif</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>

    <string name="deleted_key">
    <xliff:g id="key" example="4">%1$s</xliff:g>
    deleted
    </string>
</resources>
