<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/menu_framelayout"
    android:background="#F7F7F7"
    >
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#EBEBEB"
                />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:clickable="true"
                android:background="@drawable/background_style"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/shop_business"
                    />
                <com.merchants.main.View.SwitchButton.UISwitchButton
                    android:id="@+id/shop_business_switchbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:background="#EBEBEB"
                />
            <RelativeLayout
                android:id="@+id/store_management_business_time"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:clickable="true"
                android:background="@drawable/background_style"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/business_time"
                    />
                <ImageView
                    android:id="@+id/business_time_more"
                    android:layout_width="7dp"
                    android:layout_height="12dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/more"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    />
                <TextView
                    android:id="@+id/business_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_toLeftOf="@id/business_time_more"
                    android:layout_centerVertical="true"
                    android:text="22:00"
                    />

            </RelativeLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#EBEBEB"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#EBEBEB"
                />
            <RelativeLayout
                android:id="@+id/shop_notices_layout"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:clickable="true"
                android:background="@drawable/background_style"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/shop_notices"
                    />
                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="12dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/more"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#EBEBEB"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#d6d6d6"
                />
            <RelativeLayout
                android:id="@+id/send_price_layout"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:clickable="true"
                android:background="@drawable/background_style"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/send_price"
                    />
                <ImageView
                    android:id="@+id/send_price_more"
                    android:layout_width="7dp"
                    android:layout_height="12dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/more"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    />
                <TextView
                    android:id="@+id/send_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_toLeftOf="@id/send_price_more"
                    android:layout_centerVertical="true"
                    android:text="20元/起送"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:background="#EBEBEB"
                />
            <RelativeLayout
                android:id="@+id/send_food_price_layout"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:clickable="true"
                android:background="@drawable/background_style"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/send_food_price"
                    />
                <ImageView
                    android:id="@+id/send_food_price_more"
                    android:layout_width="7dp"
                    android:layout_height="12dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/more"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    />
                <TextView
                    android:id="@+id/send_food_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_toLeftOf="@id/send_food_price_more"
                    android:layout_centerVertical="true"
                    android:text="0元/送餐费"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:background="#EBEBEB"
                />
            <RelativeLayout
                android:id="@+id/send_time_layout"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:clickable="true"
                android:background="@drawable/background_style"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/send_time"
                    />
                <ImageView
                    android:id="@+id/send_time_more"
                    android:layout_width="7dp"
                    android:layout_height="12dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/more"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    />
                <TextView
                    android:id="@+id/send_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_toLeftOf="@id/send_time_more"
                    android:layout_centerVertical="true"
                    android:text="30分钟/送达"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#EBEBEB"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#EBEBEB"
                />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:clickable="true"
                android:background="@drawable/background_style"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/message_business"
                    />
                <com.merchants.main.View.SwitchButton.UISwitchButton
                    android:id="@+id/message_business_switchbuton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:background="#EBEBEB"
                />
            <RelativeLayout
                android:id="@+id/store_phone_number_layout"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:clickable="true"
                android:background="@drawable/background_style"
                >
                <TextView
                    android:id="@+id/store_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="1520000000"
                    />
                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="12dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/more"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:background="#EBEBEB"
                />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:clickable="true"
                android:background="@drawable/background_style"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:layout_marginLeft="30dp"
                    android:textColor="#747675"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/client_business"
                    />
                <com.merchants.main.View.SwitchButton.UISwitchButton
                    android:id="@+id/client_business_switchbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#EBEBEB"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#EBEBEB"
                />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:id="@+id/store_login_exit"
                android:clickable="true"
                android:background="@drawable/background_style"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="55dp"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:textColor="#e64939"
                    android:text="@string/log_out"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="30dp"
                android:background="#EBEBEB"
                />
        </LinearLayout>
    </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>